--- a/obs/data/locale/en-US.ini
+++ b/obs/data/locale/en-US.ini
@@ -19,6 +19,7 @@ Properties="Properties"
 MoveUp="Move Up"
 MoveDown="Move Down"
 Settings="Settings"
+Name="Name"
 Exit="Exit"
 Mixer="Mixer"
 Browse="Browse"
@@ -216,9 +217,13 @@ Basic.Settings.Stream.StreamType="Stream Type"
 
 # basic mode 'output' settings
 Basic.Settings.Output="Output"
+Basic.Settings.Output.Encoder="Encoder"
+Basic.Settings.Output.SelectDirectory="Select Recording Directory"
+Basic.Settings.Output.SelectFile="Select Recording File"
 Basic.Settings.Output.Mode="Output Mode"
 Basic.Settings.Output.Mode.Simple="Simple (Stream and/or record)"
-Basic.Settings.Output.Mode.Advanced="Advanced (Custom output type)"
+Basic.Settings.Output.Mode.Adv="Advanced"
+Basic.Settings.Output.Mode.FFmpeg="FFmpeg Output"
 Basic.Settings.Output.Simple.SavePath="FLV Recording Path"
 Basic.Settings.Output.VideoBitrate="Video Bitrate"
 Basic.Settings.Output.AudioBitrate="Audio Bitrate"
@@ -226,9 +231,34 @@ Basic.Settings.Output.Reconnect="Automatically Reconnect"
 Basic.Settings.Output.RetryDelay="Retry Delay (seconds)"
 Basic.Settings.Output.MaxRetries="Maximum Retries"
 Basic.Settings.Output.Advanced="Enable Advanced Encoder Settings"
-Basic.Settings.Output.EncoderPreset="Encoder Preset"
+Basic.Settings.Output.EncoderPreset="Encoder Preset (higher = less CPU)"
 Basic.Settings.Output.CustomEncoderSettings="Custom Encoder Settings"
 Basic.Settings.Output.UseCBR="Use Constant Bitrate"
+Basic.Settings.Output.UseBufferSize="Use Custom Buffer Size"
+
+# basic mode 'output' settings - advanced section
+Basic.Settings.Output.Adv.Rescale="Rescale Output"
+Basic.Settings.Output.Adv.UseSingleAudioTrack="Single audio track (index)"
+Basic.Settings.Output.Adv.UseMultitrackAudio="Multiple audio tracks (if supported)"
+Basic.Settings.Output.Adv.Streaming="Streaming"
+Basic.Settings.Output.Adv.Recording="Recording"
+Basic.Settings.Output.Adv.Audio.MainTrack="Main Audio Track (Track 1)"
+Basic.Settings.Output.Adv.Audio.Track2="Track 2"
+Basic.Settings.Output.Adv.Audio.Track2="Track 2"
+Basic.Settings.Output.Adv.Audio.Track3="Track 3"
+Basic.Settings.Output.Adv.Audio.Track4="Track 4"
+Basic.Settings.Output.Adv.Recording.UseStreamEncoder="(Use stream encoder)"
+
+# basic mode 'output' settings - advanced section - recording subsection
+Basic.Settings.Output.Adv.Recording.Type="Type"
+Basic.Settings.Output.Adv.Recording.Type.Standard="Standard"
+Basic.Settings.Output.Adv.Recording.Type.FFmpegOutput="Custom Output (FFmpeg)"
+Basic.Settings.Output.Adv.FFmpeg.SaveFilter="Common recording formats (*.avi *.mp4 *.flv *.ts *.mkv *.wav *.aac);;All Files (*.*)"
+Basic.Settings.Output.Adv.FFmpeg.SavePathURL="File path or URL"
+Basic.Settings.Output.Adv.FFmpeg.VEncoder="Video Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.VEncoderSettings="Video Encoder Settings (if any)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoder="Audio Encoder (blank=default)"
+Basic.Settings.Output.Adv.FFmpeg.AEncoderSettings="Audio Encoder Settings (if any)"
 
 # basic mode 'video' settings
 Basic.Settings.Video="Video"
