obs-x264: Add more properties
Add CBR, CRF to properties so that it can be changed by the user.  If
CBR is on, CRF will be disabled.  Also added a 'Use Custom Buffer Size'
option to make it so that the buffer size will automatically be set to
the bitrate if its value is false.  This is primarily a convenience
feature for users.

--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -1,5 +1,8 @@
 Bitrate="Bitrate"
+CustomBufsize="Use Custom Buffer Size"
 BufferSize="Buffer Size"
+UseCBR="Use CBR"
+CRF="CRF"
 KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
 CPUPreset="CPU Usage Preset (encoder speed)"
 Profile="Profile"
