--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -4,7 +4,7 @@ BufferSize="Buffer Size"
 UseCBR="Use CBR"
 CRF="CRF"
 KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
-CPUPreset="CPU Usage Preset (encoder speed)"
+CPUPreset="CPU Usage Preset (higher = less CPU)"
 Profile="Profile"
 Tune="Tune"
 EncoderOptions="x264 Encoder Options (separated by space)"
