obs-x264: Make property name a bit shorter

--- a/plugins/obs-x264/data/locale/en-US.ini
+++ b/plugins/obs-x264/data/locale/en-US.ini
@@ -7,4 +7,4 @@ KeyframeIntervalSec="Keyframe Interval (seconds, 0=auto)"
 CPUPreset="CPU Usage Preset (higher = less CPU)"
 Profile="Profile"
 Tune="Tune"
-EncoderOptions="x264 Encoder Options (separated by space)"
+EncoderOptions="x264 Options (separated by space)"
